--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,7 @@ version: '3.1'
 services:
 
   db:
-    image: postgres
+    image: postgres:13.2
     restart: always
     ports:
       - 5432:5432
