Organized guice modules and created scheduler for cleaning up expired verification tokens

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -12,5 +12,10 @@ database {
 }
 
 customer {
-  verificationTokenExpirationInSeconds = 86400
+  verification-token-expiration-in-seconds = 86400
+}
+
+expired-verification-tokens-scheduler {
+  enabled = true
+  period-in-millis = 60000
 }
