--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -1,21 +1,31 @@
 server {
   host = "localhost"
+  host = ${?SERVER_HOST}
   port = 8080
+  port = ${?SERVER_PORT}
 }
 
 database {
+  host = "localhost"
+  host = ${?DB_HOST}
   driver = "org.postgresql.Driver"
-  url = "jdbc:postgresql://localhost:5432/Bookworm"
+  url = "jdbc:postgresql://"${database.host}":5432/Bookworm"
   user = "Bookworm"
+  user = ${?DB_USER}
   password = "password"
+  password = ${?DB_PASS}
   thread-pool-size = 32
+  thread-pool-size = ${?DB_THREAD_POOL_SIZE}
 }
 
 customer {
   verification-token-expiration-in-seconds = 86400
+  verification-token-expiration-in-seconds = ${?VERIFICATION_TOKEN_IN_SECONDS}
 }
 
 expired-verification-tokens-scheduler {
   enabled = true
+  enabled = ${?EXPIRED_VERIFICATION_TOKENS_SCHEDULER_ENABLED}
   period-in-millis = 60000
+  period-in-millis = ${?EXPIRED_VERIFICATION_TOKENS_SCHEDULER_PERIOD_IN_MILLIS}
 }
