Added registration verification email with aws ses

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -21,6 +21,18 @@ database {
 customer {
   verification-token-expiration-in-seconds = 86400
   verification-token-expiration-in-seconds = ${?VERIFICATION_TOKEN_IN_SECONDS}
+  customer-registration-verification-config {
+    sender-email = "billsoumakis@gmail.com"
+    sender-email = ${?SENDER_EMAIL}
+    aws-region = "us-east-2",
+    aws-region = ${?AWS_REGION}
+    ses-configuration-set = "RegistrationVerificationConfigurationSet"
+    ses-configuration-set = ${?SES_CONFIGURATION_SET}
+    registration-verification-email-template-name = "registration-verification-pending-template"
+    registration-verification-email-template-name = ${?REGISTRATION_VERIFICATION_EMAIL_TEMPLATE_NAME}
+    thread-pool-size = 32
+    thread-pool-size = ${?SES_THREAD_POOL_SIZE}
+  }
 }
 
 expired-verification-tokens-scheduler {
