Completed ses integration for sending email

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -1,7 +1,7 @@
 server {
   host = "localhost"
   host = ${?SERVER_HOST}
-  port = 8080
+  port = 9990
   port = ${?SERVER_PORT}
 }
 
@@ -24,15 +24,18 @@ customer {
   customer-registration-verification-config {
     sender-email = "billsoumakis@gmail.com"
     sender-email = ${?SENDER_EMAIL}
-    aws-region = "us-east-2",
-    aws-region = ${?AWS_REGION}
-    ses-configuration-set = "RegistrationVerificationConfigurationSet"
-    ses-configuration-set = ${?SES_CONFIGURATION_SET}
     registration-verification-email-template-name = "registration-verification-pending-template"
     registration-verification-email-template-name = ${?REGISTRATION_VERIFICATION_EMAIL_TEMPLATE_NAME}
     thread-pool-size = 32
     thread-pool-size = ${?SES_THREAD_POOL_SIZE}
   }
+}
+
+aws {
+  aws-region = "us-east-2"
+  aws-region = ${?AWS_REGION}
+  ses-configuration-set = "RegistrationVerificationConfigurationSet"
+  ses-configuration-set = ${?SES_CONFIGURATION_SET}
 }
 
 expired-verification-tokens-scheduler {
