Added aws access key and secret access key as environment variables

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -36,6 +36,10 @@ aws {
   aws-region = ${?AWS_REGION}
   ses-configuration-set = "RegistrationVerificationConfigurationSet"
   ses-configuration-set = ${?SES_CONFIGURATION_SET}
+  aws-access-key = "replaceme"
+  aws-access-key = ${?AWS_ACCESS_KEY}
+  aws-secret-access-key = "replaceme"
+  aws-secret-access-key = ${?AWS_SECRET_ACCESS_KEY}
 }
 
 expired-verification-tokens-scheduler {
