--- a/docker-compose-local.yml
+++ b/docker-compose-local.yml
@@ -21,8 +21,8 @@ services:
       DB_HOST: "db"
       SERVER_HOST: "0.0.0.0"
       SERVER_PORT: "9990"
-      AWS_ACCESS_KEY_ID: "replaceme"
-      AWS_SECRET_KEY: "replaceme2"
+      AWS_ACCESS_KEY: "replaceme"
+      AWS_SECRET_ACCESS_KEY: "replaceme2"
 
 networks:
   default:
