--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -38,6 +38,18 @@ aws {
   ses-configuration-set = ${?SES_CONFIGURATION_SET}
 }
 
+redis {
+  url = "redis://localhost"
+  url = ${?REDIS_URL}
+}
+
+authentication-tokens-config {
+  expiration-in-seconds = 28800 //8 hours
+  expiration-in-seconds = ${?AUTHENTICATION_TOKENS_EXPIRATION_IN_SECONDS}
+  jwt-secret-key = "secretKey"
+  jwt-secret-key = ${?AUTHENTICATION_TOKENS_JWT_SECRET_KEY}
+}
+
 expired-verification-tokens-scheduler {
   enabled = true
   enabled = ${?EXPIRED_VERIFICATION_TOKENS_SCHEDULER_ENABLED}
